--- a/application/mobile/view/user/signin.html
+++ b/application/mobile/view/user/signin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="zh"><head><meta charset="utf-8" />
-<title>签到</title>
+<title>牧场签到</title>
 <meta name="description" content="" />
 <meta name="keywords" content="" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -23,7 +23,7 @@ window.addEventListener('resize', function() {
 <div class="classreturnbox">
 <div class="classreturn">
     <div class="ds-in-bl return"><a href="javascript:history.back(-1);"><img src="<?php echo http_host(); ?>/images/mobile/icon_return3.png" alt="返回"></a></div>
-    <div class="ds-in-bl tit center"><span style="vertical-align:middle;">签到</span></div>
+    <div class="ds-in-bl tit center"><span style="vertical-align:middle;">牧场签到</span></div>
 </div>
 </div>
 
