--- a/application/mobile/view/user_project/agreement.html
+++ b/application/mobile/view/user_project/agreement.html
@@ -92,7 +92,7 @@ function download_agreement () {
 		</tr>
 		<tr>
 			<td>起息日</td>
-			<td><?php echo date("Y-m-d", ($post['add_time'] + 3600 * 24)); ?></td>
+			<td><?php echo date("Y-m-d", $post['add_time']); ?></td>
 		</tr>
 		<tr>
 			<td>到期日</td>
