--- a/application/mobile/view/user_recharge/pay_common.html
+++ b/application/mobile/view/user_recharge/pay_common.html
@@ -29,14 +29,13 @@ window.addEventListener('resize', function() {
 </div>
 </div>
 
-<div style="color:#666;text-align:center;font-size:20px;padding-top:15px;padding-bottom:5px;">入款 {$money} 元</div>
-<script type="text/javascript" src="/js/clipboard.min.js"></script>
+<div><img src="/images/mobile/kuaisuchongzhi.jpg" style="width:100%;height:auto;"></div>
 
-<div style="padding:20px;font-size:16px;color:#fff;line-height:1.2;background-color:#29a03a;">
+<div style="padding:20px;font-size:16px;line-height:1.2;color:#333;background-color:#fff;">
 快速充值：<br>
-1.支付宝或者微信转到银行卡<br>
-2.手机银行或者网上银行转到银行卡<br>
-3.每次充值之前，请联系人工客服索取最新入款账号<br>
-注意：支付宝或者微信只能对私转账，充值成功，（金额+返利1%）实时到账！</div>
+1.支付宝或微信转到银行卡<br>
+2.手机银行或网上银行转到银行卡<br>
+3.每次充值之前，请联系<a style="color:#1edeb4;" href="<?php echo sysconfig('CMS_ONLINE_SERVICE_URL'); ?>">人工客服</a>索取最新入款账号<br>
+<span style="font-size:12px;color:red;">注意：支付宝或微信只能对私转账，充值成功，（金额+返利1%）实时到账！</span></div>
 
 </body></html>
