--- a/application/mobile/view/user/referral.html
+++ b/application/mobile/view/user/referral.html
@@ -71,6 +71,27 @@ window.addEventListener('resize', function() {
     </script>
 </div>
 
+<div class="am-grid am-grid-col-3" style="margin-top:10px;">
+  <a href="javascript:;" class="am-grid-item">
+    <div class="am-grid-item-content">
+      <div class="am-grid-item-title"><?php echo $count; ?></div>
+      <div class="am-grid-item-desc">邀请人数</div>
+    </div>
+  </a>
+  <a href="javascript:;" class="am-grid-item">
+    <div class="am-grid-item-content">
+      <div class="am-grid-item-title"><?php echo round($yijijiangli, 2); ?>元</div>
+      <div class="am-grid-item-desc">一级邀请奖励</div>
+    </div>
+  </a>
+  <a href="javascript:;" class="am-grid-item">
+    <div class="am-grid-item-content">
+      <div class="am-grid-item-title"><?php echo round($erjijiangli, 2); ?>元</div>
+      <div class="am-grid-item-desc">二级邀请奖励</div>
+    </div>
+  </a>
+</div>
+
 <div class="banner_tit">邀请列表</div>
 <?php if ($list) { ?>
 <div class="am-list am-list-twoline" style="padding-top:0;">
