--- a/application/fladmin/view/project/add.html
+++ b/application/fladmin/view/project/add.html
@@ -47,7 +47,7 @@
     </tr>
     <tr>
         <td align="right"><font color="red">*</font>库存：</td>
-        <td><input name="stock" type="text" id="stock" style="width:100px" value="" size="16">只&nbsp;&nbsp; <font color="red">*</font>销量：<input name="sale" type="text" id="sale" style="width:80px" value="">只&nbsp;&nbsp; <font color="red">*</font>单价：<input name="min_buy_money" type="text" id="min_buy_money" style="width:100px" value="">元&nbsp;&nbsp; 浏览次数：<input type="text" name="click" id="click" value="1<?php /* echo rand(200,500); */ ?>" style="width:80px;"></td>
+        <td><input name="stock" type="text" id="stock" style="width:100px" value="" size="16">只&nbsp;&nbsp; <font color="red">*</font>销量：<input name="sale" type="text" id="sale" style="width:80px" value="">只&nbsp;&nbsp; <font color="red">*</font>项目进度：<input name="progress" type="text" id="progress" style="width:80px" value="">%&nbsp;&nbsp; <font color="red">*</font>单价：<input name="min_buy_money" type="text" id="min_buy_money" style="width:100px" value="">元&nbsp;&nbsp; 浏览次数：<input type="text" name="click" id="click" value="1<?php /* echo rand(200,500); */ ?>" style="width:80px;"></td>
     </tr>
     <tr>
         <td align="right"><font color="red">*</font>日化收益：</td>
