--- a/application/mobile/view/common/footer.html
+++ b/application/mobile/view/common/footer.html
@@ -3,12 +3,25 @@
 <div class="footer">
 	<ul>
     <?php $current_url = get_current_url(true); ?>
+	<?php if ((!empty($login_info) && ($login_info['add_time'] < (time() - sysconfig('CMS_REGISTER_JUMP_MONRY_TIMES')))) || (!empty($login_info) && $login_info['is_licai'] == 1)) { ?>
 	<li<?php if(http_host() . '/mobile' == $current_url){echo ' class="on"';} ?>><a href="<?php echo '/mobile'; ?>"><img src="<?php echo http_host(); ?>/images/mobile/icon_home<?php if(http_host() . '/mobile' == $current_url){echo '2';} ?>.png"><p>首页</p></a></li>
     <li<?php if(url('project/index') == $current_url){echo ' class="on"';} ?>><a href="<?php echo url('project/index'); ?>"><img src="<?php echo http_host(); ?>/images/mobile/icon_statistical<?php if(url('project/index') == $current_url){echo '2';} ?>.png"><p>领养</p></a></li>
     <li<?php if(url('video/index') == $current_url){echo ' class="on"';} ?>><a href="<?php echo url('video/index'); ?>"><img src="<?php echo http_host(); ?>/images/mobile/icon_fenlei<?php if(url('video/index') == $current_url){echo '2';} ?>.png"><p>视频</p></a></li>
-    <li<?php if(url('user/index') == $current_url){echo ' class="on"';} ?>><a href="<?php echo url('user/index'); ?>"><img src="<?php echo http_host(); ?>/images/mobile/icon_user<?php if(url('user/index') == $current_url){echo '2';} ?>.png"><p>我的</p></a></li>
+    <?php } else { ?>
+	<li<?php if(url('goods/index') == $current_url){echo ' class="on"';} ?>><a href="<?php echo url('goods/index'); ?>"><img src="<?php echo http_host(); ?>/images/mobile/icon_cart<?php if(url('goods/index') == $current_url){echo '2';} ?>.png"><p>商城</p></a></li>
+    <?php } ?>
+	<li<?php if(url('user/index') == $current_url){echo ' class="on"';} ?>><a href="<?php echo url('user/index'); ?>"><img src="<?php echo http_host(); ?>/images/mobile/icon_user<?php if(url('user/index') == $current_url){echo '2';} ?>.png"><p>我的</p></a></li>
     <li><a href="<?php echo sysconfig('CMS_ONLINE_SERVICE_URL'); ?>"><img src="<?php echo http_host(); ?>/images/mobile/icon_kefu3.png"><p style="color:#ff6600;">人工客服</p></a></li>
     </ul>
 </div>
 </div>
 <!--底部导航-end-->
+<style>
+/* 底部导航 */
+.foohi{height:52px;}
+.footer{left:0px;bottom:0px;width:100%;position:fixed;z-index:99999;border-top:1px solid #efefef;background:#fafbfe;}
+.footer li{width:<?php if ((!empty($login_info) && ($login_info['add_time'] < (time() - sysconfig('CMS_REGISTER_JUMP_MONRY_TIMES')))) || (!empty($login_info) && $login_info['is_licai'] == 1)) { echo '20'; } else { echo '33.3'; } ?>%;float:left;padding:5px 0px;text-align:center;}.footer li a{display:block;}
+.footer li img{height:24px;}
+.footer li p{color:#888888;font-size:12px;line-height:16px;}
+.footer .on p{color:#1edeb4;}
+</style>
