--- a/application/mobile/view/feedback/add.html
+++ b/application/mobile/view/feedback/add.html
@@ -39,12 +39,9 @@ window.addEventListener('resize', function() {
 <div class="adr-form-group">
 问题类型：
 <select id="type" name="type">
-<option value ="投资问题">投资问题</option>
-<option value ="项目建议">项目建议</option>
+<option value ="商城建议">商城建议</option>
 <option value ="登录/注册">登录/注册</option>
 <option value ="认证问题">认证问题</option>
-<option value ="售后服务">售后服务</option>
-<option value ="充值/提现">充值/提现</option>
 <option value ="其它建议">其它建议</option>
 </select>
 </div>
