--- a/application/mobile/view/login/index.html
+++ b/application/mobile/view/login/index.html
@@ -57,7 +57,7 @@ window.addEventListener('resize', function() {
 </div>
 <div style="padding:0 15px;">
 <button onclick="dosubmit()" type="button" class="am-button">立即登录</button>
-<a style="margin-top:10px;" href="<?php echo url('login/register'); ?>" class="am-button am-button-bottom-secondary">注册成为牧场主</a></div>
+<a style="margin-top:10px;" href="<?php echo url('login/register'); ?>" class="am-button am-button-bottom-secondary">注册</a></div>
 </form>
 
 <div class="box reg">
