--- a/application/mobile/view/user/signin.html
+++ b/application/mobile/view/user/signin.html
@@ -24,6 +24,7 @@ window.addEventListener('resize', function() {
 <div class="classreturn">
     <div class="ds-in-bl return"><a href="javascript:history.back(-1);"><img src="<?php echo http_host(); ?>/images/mobile/icon_return3.png" alt="返回"></a></div>
     <div class="ds-in-bl tit center"><span style="vertical-align:middle;">牧场签到</span></div>
+    <div class="ds-in-bl nav_menu">累计签到(<?php echo $login_info['signin_num']; ?>)</div>
 </div>
 </div>
 
