--- a/application/mobile/view/index/index.html
+++ b/application/mobile/view/index/index.html
@@ -121,7 +121,7 @@ var swiper = new Swiper('.swiper-container', {
 <!-- 回到顶部 -->
 <div class="go_top" id="go_top" style="display:none;display:block;width:24px;height:24px;padding:5px;border-radius:50%;position:fixed;bottom:120px;right:15px;border:1px solid #ccc;background:#f2f2f2;"><img src="/images/mobile/gotop.png" style="width:24px;height:24px;border-radius:50%;overflow:hidden;"></div>
 
-<?php if (false) { ?>
+<?php if (sysconfig('CMS_HOME_START_DOWNLOAD') == 1) { ?>
 <div class="appdown" style="width:100%;height:40px;background-color:rgba(0, 0, 0, 0.5);position:fixed;bottom:52px;">
 	<div style="width:40px;height:40px;float:left;margin:0 5px;">
 		<img src="<?php echo sysconfig('CMS_LOGO_INDEXBOTTOM_IMAGE'); ?>" style="width:36px;height:36px;margin-top:2px;">
