--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -682,7 +682,7 @@
                     <section powered-by="xiumi.us" style="margin: 0px; padding: 0px; max-width: 100%; box-sizing: border-box !important; overflow-wrap: break-word !important;">
                         <section style="margin: 0px; padding: 0px; max-width: 100%; display: inline; width: auto; box-sizing: border-box !important; overflow-wrap: break-word !important;">
                             <section style="margin: 0px; padding: 0px; max-width: 100%; vertical-align: middle; line-height: 0; width: 643.146px; box-sizing: border-box !important; overflow-wrap: break-word !important;">
-                                <img data-ratio="0.006666666666666667" data-type="gif" data-w="600" class="__bg_gif" src="https://mmbiz.qpic.cn/mmbiz_gif/nPcMlz6svCViclX8fwSQ6gC2tK7Pwqf6kxbmicxQfkMovXDyObCr5nZwTFJUgROpyK6DNulTibeBNrArNXqrpRiaew/640?wx_fmt=gif" style="margin: 0px; padding: 0px; max-width: 100%; height: auto !important; vertical-align: middle; box-sizing: border-box !important; overflow-wrap: break-word !important; visibility: visible !important; width: 643.146px !important;"/>
+                                <img data-ratio="0.006666666666666667" data-type="gif" data-w="600" class="__bg_gif" src="/images/pc/gongzhonghao9.gif" style="margin: 0px; padding: 0px; max-width: 100%; height: auto !important; vertical-align: middle; box-sizing: border-box !important; overflow-wrap: break-word !important; visibility: visible !important; width: 643.146px !important;"/>
                             </section>
                         </section>
                     </section>
