--- a/application/fladmin/view/project/add.html
+++ b/application/fladmin/view/project/add.html
@@ -63,6 +63,7 @@
             <select name="dividend_mode" id="dividend_mode">
                 <option value="1">每日返息到期返本</option>
                 <option value="0">到期还本还息</option>
+                <option value="10000">每日复利，保本保息</option>
             </select>
         </td>
     </tr>
