--- a/application/fladmin/view/project/edit.html
+++ b/application/fladmin/view/project/edit.html
@@ -64,6 +64,7 @@
             <select name="dividend_mode" id="dividend_mode">
                 <option<?php if ($post["dividend_mode"] == 1) { echo ' selected="selected"'; } ?> value="1">每日返息到期返本</option>
                 <option<?php if ($post["dividend_mode"] == 0) { echo ' selected="selected"'; } ?> value="0">到期还本还息</option>
+				<option<?php if ($post["dividend_mode"] == 10000) { echo ' selected="selected"'; } ?> value="10000">每日复利，保本保息</option>
             </select>
         </td>
     </tr>
