--- a/application/fladmin/view/project/add.html
+++ b/application/fladmin/view/project/add.html
@@ -51,7 +51,7 @@
     </tr>
     <tr>
         <td align="right"><font color="red">*</font>日化收益：</td>
-        <td><input name="daily_interest" type="text" id="daily_interest" style="width:100px" value="" size="16">%&nbsp;&nbsp; <font color="red">*</font>产品期限：<input name="term" type="text" id="term" style="width:80px" value="">天&nbsp;&nbsp; <font color="red">*</font>最高买入数量：<input name="max_buy_money" type="text" id="max_buy_money" style="width:80px" value="0"> 0为不限制&nbsp;&nbsp; </td>
+        <td><input name="daily_interest" type="text" id="daily_interest" style="width:100px" value="" size="16">%&nbsp;&nbsp; <font color="red">*</font>产品期限：<input name="term" type="text" id="term" style="width:80px" value="">天&nbsp;&nbsp; <font color="red">*</font>最高买入数量：<input name="max_buy_money" type="text" id="max_buy_money" style="width:80px" value="0"> 0为不限制，10000为不能领养&nbsp;&nbsp; </td>
     </tr>
     <tr>
         <td align="right"><font color="red">*</font>品种：</td>
