--- a/application/fladmin/view/project/edit.html
+++ b/application/fladmin/view/project/edit.html
@@ -67,7 +67,8 @@
                 <option<?php if ($post["dividend_mode"] == 7) { echo ' selected="selected"'; } ?> value="7">按周付收益到期返本</option>
                 <option<?php if ($post["dividend_mode"] == 30) { echo ' selected="selected"'; } ?> value="30">按月付收益到期返本</option>
 				<option<?php if ($post["dividend_mode"] == 10000) { echo ' selected="selected"'; } ?> value="10000">每日复利，保本保息</option>
-            </select>
+				<option<?php if ($post["dividend_mode"] == 10001) { echo ' selected="selected"'; } ?> value="10001">每小时返息到期返本</option>
+			</select>
         </td>
     </tr>
     <tr>
