--- a/application/mobile/view/user_project/detail.html
+++ b/application/mobile/view/user_project/detail.html
@@ -46,7 +46,7 @@ window.addEventListener('resize', function() {
     </div>
     <div class="am-list-item">
       <div class="am-list-detailed-label">认领期限</div>
-      <div class="am-list-detailed-content"><?php echo $post['term']; ?>天</div>
+      <div class="am-list-detailed-content"><?php echo $post['term']; ?><?php if ($post['dividend_mode'] == 10001) { echo '小时'; } else { echo '天'; } ?></div>
     </div>
     <div class="am-list-item am-list-item-bordered">
       <div class="am-list-detailed-label">认领时间</div>
